tests/sumo/basic/person/errors/trainStop_car_disconnected/options.sumo
--net-file net.net.xml
-a input_additional.add.xml
--route-files input_routes.rou.xml
--no-step-log
